# incc-lsp-vscode-extension

./: README.md  install_extension.sh  install_newest_vscode_extension.sh  install_runner.sh  install_vscode_extension_working.sh
vscode-extension/test/extension/: .pdm-python  LICENSE.txt  README.md  README.md.bak  SECURITY.md  language-configuration.json  package.json  package.json.bak  pyproject.toml
vscode-extension/test/extension/bundled/libs/incc_interpreter_ue08/: interpreter.py  interpreter.py.bak
vscode-extension/test/extension/bundled/libs/incc_interpreter_ue08/LSP/: LSP_ALL.py  LSP_CONFIGS.py  LSP_ENV.py  LSP_IMPORT_ALL.py  LSP_run.py  _mlog.py  lexer_lsp.py  lsp_create.py  lsp_helper.py
vscode-extension/test/extension/bundled/libs/incc_interpreter_ue08/lexer/: lexer.py  literals.py  struct_lexer.py
vscode-extension/test/extension/bundled/libs/incc_interpreter_ue08/parser/: controlflow.py  functions.py  incc_lsp.py  literals.py  operators.py  parser.out  parser.py  parsetab.py  sequences.py  struct_parser.py  variables.py
vscode-extension/test/extension/bundled/libs/incc_interpreter_ue08/syntaxtree/: controlflow.py  functions.py  literals.py  operators.py  sequences.py  struct.py  syntaxtree.py  variables.py
vscode-extension/test/extension/bundled/libs/incc_lsp/: CONFIGS.py  SERVER.sh  SERVER_LOG_PRINT.sh  SERVER_PIPE_BOTH.sh  SERVER_PIPE_PRINT.sh  log.txt
vscode-extension/test/extension/bundled/libs/incc_lsp/extracts_from_interpreter/: LEXER_TOKS.py  (+7 more)
vscode-extension/test/extension/bundled/tool/: lsp_runner.py  lsp_server.py  lsp_server.py.bak
(+22 files in other folders)
