[project]
name = "vscode-python-tools-extension-template"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Dominik Ocsofszki", email = "dominikocsofszki@gmail.com"},
]
dependencies = [
    "pygls",
    "packaging",
    "nox>=2024.10.9",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
